# Alumina

./: Cargo.toml  README.md
src/: json_comms.rs  main.rs
