[package]
name = "alumina"
version = "0.1.0"
authors = ["Tyler Koistinen <koistinen.tyler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde_json = "1.0.64"
error-chain = "0.12.4"
